# problem-solving

./: .gitignore  CMakeLists.txt  R056_div2_C  R061_div2_A  R144_div2_A  R194_div2_A  R528_div2_B  R541_div2_B  R542_div2_B  R544_div3_C  R545_div2_A  R545_div2_C  R553_div2_B  R570_div3_A  R594_div2_A  R726_div2_A.cpp  R727_div2_A.cpp  R727_div2_B.cpp  R727_div2_D.cpp  R727_div2_E.cpp  R829_div2_A  R829_div2_B  R847_div3_A  R852_div2_A  push  template.cpp  test.js  to_solve.txt
codeforces/: COMPFEST_13-Finals_A.cpp  COMPFEST_13-Finals_D.cpp  COMPFEST_13-Finals_J.cpp  LATOKEN_R1_A.cpp  LATOKEN_R1_B.cpp  LATOKEN_R1_C.cpp  R725_div3_A.cpp  R725_div3_C.cpp  R726_div2_C.cpp  R726_div2_D.cpp  R728_div2_B.cpp  R728_div2_C.cpp  R729_div2_A.cpp  R729_div2_C.cpp  R729_div2_D.cpp
codeforces/Codeforces Round 00x/: R001_div2_A.cpp  R001_div2_B.cpp  R001_div2_C.cpp  R002_div2_A.cpp  R002_div2_B.cpp  R002_div2_C.cpp  R003_div2_A.cpp  R003_div2_B.cpp  R003_div2_C.cpp  R003_div2_D.cpp  R004_div2_A.cpp  R004_div2_B.cpp  R004_div2_C.cpp  R004_div2_D.cpp  R005_div2_A.cpp  R005_div2_B.cpp  R005_div2_C.cpp  R005_div2_D.cpp  R005_div2_E.cpp  R006_div2_A.cpp  R006_div2_B.cpp  R006_div2_C.cpp  R006_div2_D.cpp  R006_div2_E.cpp  R007_div2_A.cpp  R007_div2_B.cpp  R007_div2_C.cpp  R007_div2_D.cpp  R007_div2_E.cpp  R008_div2_A.cpp  R008_div2_B.cpp  R008_div2_C.cpp  R008_div2_D.cpp  R008_div2_E.cpp  R009_div2_A.cpp  R009_div2_B.cpp  R009_div2_C.cpp  R009_div2_D.cpp  R009_div2_E.cpp
codeforces/Codeforces Round 01x/: R010_div2_A.cpp  R010_div2_B.cpp  R010_div2_C.cpp  R010_div2_D.cpp  R010_div2_E.cpp  R011_div2_B.cpp  R011_div2_C.cpp  R011_div2_D.cpp  R011_div2_E.cpp  R012_div2_A.cpp  R012_div2_B.cpp  R012_div2_C.cpp  R012_div2_D.cpp  R012_div2_E.cpp  R013_div2_A.cpp  R013_div2_B.cpp  R013_div2_C.cpp  R013_div2_D.cpp  R013_div2_E.cpp  R014_div2_A.cpp  R014_div2_B.cpp  R014_div2_C.cpp  R014_div2_D.cpp  R014_div2_E.cpp  R015_div2_A.cpp  R015_div2_B.cpp  R015_div2_C.cpp  R015_div2_D.cpp  R016_div2_A.cpp  R016_div2_B.cpp  R016_div2_C.cpp  R016_div2_D.cpp  R016_div2_E.cpp  R017_div2_A.cpp  R017_div2_B.cpp  R017_div2_C.cpp  R017_div2_D.cpp  R018_div2_A.cpp  R018_div2_B.cpp  R018_div2_C.cpp  (+5 more)
codeforces/Codeforces Round 02x/: R020_div2_A.cpp  R020_div2_B.cpp  R020_div2_C.cpp  R021_div2_A.cpp  R021_div2_B.cpp  R021_div2_C.cpp  R021_div2_D.cpp  R022_div2_A.cpp  R022_div2_B.cpp  R022_div2_C.cpp  R022_div2_D.cpp  R023_div2_A.cpp  R023_div2_B.cpp  R024_div2_A.cpp  R024_div2_B.cpp  R024_div2_C.cpp  R024_div2_D.cpp  R024_div2_E.cpp  R025_div2_A.cpp  R025_div2_B.cpp  R025_div2_C.cpp  R025_div2_D.cpp  R025_div2_E.cpp  R026_div2_A.cpp  R026_div2_B.cpp  R027_div2_A.cpp  R027_div2_B.cpp  R027_div2_C.cpp  R027_div2_D.cpp  R027_div2_E.cpp  R028_div2_A.cpp  R028_div2_B.cpp  R028_div2_C.cpp  R028_div2_D.cpp  R029_div2_A.cpp  R029_div2_B.cpp  R029_div2_C.cpp  R029_div2_D.cpp  R029_div2_E.cpp
codeforces/Codeforces Round 03x/: R030_div2_A.cpp  R030_div2_B.cpp  R030_div2_C.cpp  R031_div2_A.cpp  R031_div2_B.cpp  R031_div2_C.cpp  R031_div2_D.cpp  R031_div2_E.cpp  R032_div2_A.cpp  R032_div2_B.cpp  R033_div2_A.cpp  R034_div2_A.cpp  R034_div2_B.cpp  R034_div2_C.cpp  R034_div2_D.cpp  R034_div2_E.cpp  R035_div2_A.cpp  R035_div2_B.cpp  R035_div2_C.cpp  R035_div2_D.cpp  R035_div2_E.cpp  R036_div2_A.cpp  R036_div2_B.cpp  R037_div2_A.cpp  R037_div2_B.cpp  R037_div2_C.cpp  R038_div2_A.cpp  R038_div2_B.cpp  R038_div2_C.cpp  R038_div2_D.cpp  R038_div2_E.cpp  R039_div2_A.cpp  R039_div2_B.cpp
codeforces/Codeforces Round 04x/: R040_div2_A.cpp  R040_div2_B.cpp  R040_div2_C.cpp  R041_div2_A.cpp  R041_div2_B.cpp  R041_div2_C.cpp  R041_div2_D.cpp  R042_div2_A.cpp  R042_div2_B.cpp  R042_div2_C.cpp  R042_div2_D.cpp  R043_div2_A.cpp  R043_div2_B.cpp  R043_div2_C.cpp  R044_div2_A.cpp  R044_div2_B.cpp  R044_div2_C.cpp  R044_div2_D.cpp  R045_div2_A.cpp  R045_div2_B.cpp  R045_div2_C.cpp  R045_div2_D.cpp  R046_div2_A.cpp  R046_div2_B.cpp  R046_div2_C.cpp  R046_div2_D.cpp  R046_div2_E.cpp  R047_div2_A.cpp  R047_div2_B.cpp  R047_div2_C.cpp  R047_div2_D.cpp  R047_div2_E.cpp  R048_div2_A.cpp  R048_div2_B.cpp  R048_div2_C.cpp  R048_div2_D.cpp  R049_div2_A.cpp  R049_div2_B.cpp  R049_div2_C.cpp  R049_div2_D.cpp  (+1 more)
codeforces/Codeforces Round 05x/: R050_div2_A.cpp  R050_div2_B.cpp  R050_div2_C.cpp  R051_div2_A.cpp  R051_div2_B.cpp  R051_div2_C.cpp  R051_div2_D.cpp  R051_div2_E.cpp  R052_div2_A.cpp  R052_div2_B.cpp  R052_div2_C.cpp  R052_div2_D.cpp  R052_div2_E.cpp  R053_div2_A.cpp  R053_div2_B.cpp  R053_div2_C.cpp  R054_div2_A.cpp  R054_div2_B.cpp  R055_div2_A.cpp  R055_div2_B.cpp  R055_div2_C.cpp  R056_div2_A.cpp  R056_div2_B.cpp  R057_div2_A.cpp  R057_div2_B.cpp  R057_div2_C.cpp  R057_div2_D.cpp  R057_div2_E.cpp  R058_div2_A.cpp  R059_div2_A.cpp  R059_div2_B.cpp  R059_div2_C.cpp  R059_div2_D.cpp  R059_div2_E.cpp
codeforces/Codeforces Round 06x/: R060_div2_A.cpp  R060_div2_B.cpp  R061_div2_A.cpp  R061_div2_B.cpp  R061_div2_C.cpp  R061_div2_D.cpp  R061_div2_E.cpp  R062_div2_A.cpp  R062_div2_B.cpp  R062_div2_D.cpp  R063_div2_A.cpp  R063_div2_B.cpp  R063_div2_C.cpp  R063_div2_D.cpp  R063_div2_E.cpp  R064_div2_A.cpp  R064_div2_B.cpp  R065_div2_A.cpp  R065_div2_B.cpp  R065_div2_C.cpp  R066_div2_A.cpp  R066_div2_C.cpp  R067_div2_A.cpp  R067_div2_B.cpp  R067_div2_C.cpp  R068_div2_A.cpp  R069_div2_A.cpp  R069_div2_B.cpp
codeforces/Codeforces Round 07x/: R070_div2_A.cpp  R070_div2_B.cpp  R071_div2_A.cpp  R072_div2_A.cpp  R072_div2_B.cpp  R073_div2_A.cpp  R073_div2_B.cpp  R073_div2_C.cpp  R074_div2_A.cpp  R074_div2_B.cpp  R075_div2_A.cpp  R075_div2_B.cpp  (+11 more)
codewars/: 4_Advanced binary toggling puzzle.py  4_Big Big Big Padovan Number.py  4_Big Generalized Fibonacci numbers.py  4_Count the connected components.js  4_Solving a puzzle by matching four corners.py  5_Buddy Pairs.py  5_Find the smallest.py  5_John and Ann sign up for Codewars.py  5_Make an increasing sequence.js  5_Subsequence Product Sum.py  history.txt
in_progress/: Global_Round_15_D.cpp  Global_Round_15_E.cpp  R729_div2_E1.cpp  R730_div2_D2.cpp  sa.cpp
misc/: misc.cpp  modular.cpp  scc.cpp  template.cpp
(+6278 files in other folders)
