cmake_minimum_required(VERSION 3.19)
project(steady_seller)

set(CMAKE_CXX_STANDARD 17)

add_executable(R353_div2_A "codeforces/Codeforces Round 35x/R353_div2_A.cpp")
add_executable(R353_div2_B "codeforces/Codeforces Round 35x/R353_div2_B.cpp")
add_executable(R353_div2_C "codeforces/Codeforces Round 35x/R353_div2_C.cpp")
add_executable(R352_div2_A "codeforces/Codeforces Round 35x/R352_div2_A.cpp")
add_executable(R352_div2_B "codeforces/Codeforces Round 35x/R352_div2_B.cpp")
add_executable(R352_div2_C "codeforces/Codeforces Round 35x/R352_div2_C.cpp")
add_executable(R351_div2_A "codeforces/Codeforces Round 35x/R351_div2_A.cpp")
add_executable(R351_div2_B "codeforces/Codeforces Round 35x/R351_div2_B.cpp")
add_executable(R351_div2_C "codeforces/Codeforces Round 35x/R351_div2_C.cpp")
add_executable(R350_div2_A "codeforces/Codeforces Round 35x/R350_div2_A.cpp")
add_executable(R350_div2_B "codeforces/Codeforces Round 35x/R350_div2_B.cpp")
add_executable(R350_div2_C "codeforces/Codeforces Round 35x/R350_div2_C.cpp")
add_executable(R012_div2_C "codeforces/Educational Round 01x/R012_div2_C.cpp")
add_executable(R012_div2_B "codeforces/Educational Round 01x/R012_div2_B.cpp")
add_executable(R012_div2_A "codeforces/Educational Round 01x/R012_div2_A.cpp")
add_executable(R347_div2_A "codeforces/Codeforces Round 34x/R347_div2_A.cpp")
add_executable(R347_div2_B "codeforces/Codeforces Round 34x/R347_div2_B.cpp")
add_executable(R347_div2_C "codeforces/Codeforces Round 34x/R347_div2_C.cpp")
add_executable(R918_div4_B "codeforces/Codeforces Round 91x/R918_div4_B.cpp")
add_executable(R918_div4_A "codeforces/Codeforces Round 91x/R918_div4_A.cpp")
add_executable(R918_div4_D "codeforces/Codeforces Round 91x/R918_div4_D.cpp")
add_executable(R918_div4_E "codeforces/Codeforces Round 91x/R918_div4_E.cpp")
add_executable(R918_div4_F "codeforces/Codeforces Round 91x/R918_div4_F.cpp")
add_executable(R011_div2_A "codeforces/Educational Round 01x/R011_div2_A.cpp")
add_executable(R011_div2_B "codeforces/Educational Round 01x/R011_div2_B.cpp")
add_executable(R011_div2_C "codeforces/Educational Round 01x/R011_div2_C.cpp")
add_executable(R346_div2_A "codeforces/Codeforces Round 34x/R346_div2_A.cpp")
add_executable(R346_div2_B "codeforces/Codeforces Round 34x/R346_div2_B.cpp")
add_executable(R346_div2_C "codeforces/Codeforces Round 34x/R346_div2_C.cpp")
add_executable(R010_div2_C "codeforces/Educational Round 01x/R010_div2_C.cpp")
add_executable(R010_div2_B "codeforces/Educational Round 01x/R010_div2_B.cpp")
add_executable(R010_div2_A "codeforces/Educational Round 01x/R010_div2_A.cpp")
add_executable(R345_div2_A "codeforces/Codeforces Round 34x/R345_div2_A.cpp")
add_executable(R345_div2_B "codeforces/Codeforces Round 34x/R345_div2_B.cpp")
add_executable(R345_div2_C "codeforces/Codeforces Round 34x/R345_div2_C.cpp")
add_executable(R344_div2_C "codeforces/Codeforces Round 34x/R344_div2_C.cpp")
add_executable(R344_div2_B "codeforces/Codeforces Round 34x/R344_div2_B.cpp")
add_executable(R344_div2_A "codeforces/Codeforces Round 34x/R344_div2_A.cpp")
add_executable(R009_div2_A "codeforces/Educational Round 00x/R009_div2_A.cpp")
add_executable(R009_div2_B "codeforces/Educational Round 00x/R009_div2_B.cpp")
add_executable(R009_div2_C "codeforces/Educational Round 00x/R009_div2_C.cpp")
add_executable(R343_div2_C "codeforces/Codeforces Round 34x/R343_div2_C.cpp")
add_executable(R343_div2_B "codeforces/Codeforces Round 34x/R343_div2_B.cpp")
add_executable(R343_div2_A "codeforces/Codeforces Round 34x/R343_div2_A.cpp")
add_executable(R008_div2_C "codeforces/Educational Round 00x/R008_div2_C.cpp")
add_executable(R008_div2_B "codeforces/Educational Round 00x/R008_div2_B.cpp")
add_executable(R008_div2_A "codeforces/Educational Round 00x/R008_div2_A.cpp")
add_executable(R342_div2_A "codeforces/Codeforces Round 34x/R342_div2_A.cpp")
add_executable(R342_div2_B "codeforces/Codeforces Round 34x/R342_div2_B.cpp")
add_executable(R342_div2_C "codeforces/Codeforces Round 34x/R342_div2_C.cpp")
add_executable(R007_div2_A "codeforces/Educational Round 00x/R007_div2_A.cpp")
add_executable(R007_div2_B "codeforces/Educational Round 00x/R007_div2_B.cpp")
add_executable(R007_div2_C "codeforces/Educational Round 00x/R007_div2_C.cpp")
add_executable(R341_div2_A "codeforces/Codeforces Round 34x/R341_div2_A.cpp")
add_executable(R341_div2_B "codeforces/Codeforces Round 34x/R341_div2_B.cpp")
add_executable(R341_div2_C "codeforces/Codeforces Round 34x/R341_div2_C.cpp")
add_executable(R340_div2_C "codeforces/Codeforces Round 34x/R340_div2_C.cpp")
add_executable(R340_div2_B "codeforces/Codeforces Round 34x/R340_div2_B.cpp")
add_executable(R340_div2_A "codeforces/Codeforces Round 34x/R340_div2_A.cpp")
add_executable(R006_div2_A "codeforces/Educational Round 00x/R006_div2_A.cpp")
add_executable(R006_div2_B "codeforces/Educational Round 00x/R006_div2_B.cpp")
add_executable(R006_div2_C "codeforces/Educational Round 00x/R006_div2_C.cpp")
add_executable(R005_div2_C "codeforces/Educational Round 00x/R005_div2_C.cpp")
add_executable(R005_div2_B "codeforces/Educational Round 00x/R005_div2_B.cpp")
add_executable(R005_div2_A "codeforces/Educational Round 00x/R005_div2_A.cpp")
add_executable(R339_div2_C "codeforces/Codeforces Round 33x/R339_div2_C.cpp")
add_executable(R339_div2_B "codeforces/Codeforces Round 33x/R339_div2_B.cpp")
add_executable(R339_div2_A "codeforces/Codeforces Round 33x/R339_div2_A.cpp")
add_executable(R349_div2_B "codeforces/Codeforces Round 34x/R349_div2_B.cpp")
add_executable(R349_div2_A "codeforces/Codeforces Round 34x/R349_div2_A.cpp")
add_executable(R349_div2_C "codeforces/Codeforces Round 34x/R349_div2_C.cpp")
add_executable(R337_div2_A "codeforces/Codeforces Round 33x/R337_div2_A.cpp")
add_executable(R337_div2_B "codeforces/Codeforces Round 33x/R337_div2_B.cpp")
add_executable(R337_div2_C "codeforces/Codeforces Round 33x/R337_div2_C.cpp")
add_executable(R004_div2_A "codeforces/Educational Round 00x/R004_div2_A.cpp")
add_executable(R004_div2_B "codeforces/Educational Round 00x/R004_div2_B.cpp")
add_executable(R004_div2_C "codeforces/Educational Round 00x/R004_div2_C.cpp")
add_executable(R336_div2_A "codeforces/Codeforces Round 33x/R336_div2_A.cpp")
add_executable(R336_div2_B "codeforces/Codeforces Round 33x/R336_div2_B.cpp")
add_executable(R336_div2_C "codeforces/Codeforces Round 33x/R336_div2_C.cpp")
add_executable(R003_div2_A "codeforces/Educational Round 00x/R003_div2_A.cpp")
add_executable(R003_div2_B "codeforces/Educational Round 00x/R003_div2_B.cpp")
add_executable(R003_div2_C "codeforces/Educational Round 00x/R003_div2_C.cpp")
add_executable(R335_div2_A "codeforces/Codeforces Round 33x/R335_div2_A.cpp")
add_executable(R335_div2_B "codeforces/Codeforces Round 33x/R335_div2_B.cpp")
add_executable(R335_div2_C "codeforces/Codeforces Round 33x/R335_div2_C.cpp")
add_executable(R920_div3_C "codeforces/Codeforces Round 92x/R920_div3_C.cpp")
add_executable(R920_div3_B "codeforces/Codeforces Round 92x/R920_div3_B.cpp")
add_executable(R002_div2_B "codeforces/Educational Round 00x/R002_div2_B.cpp")
add_executable(R002_div2_A "codeforces/Educational Round 00x/R002_div2_A.cpp")
add_executable(R002_div2_C "codeforces/Educational Round 00x/R002_div2_C.cpp")
add_executable(R333_div2_A "codeforces/Codeforces Round 33x/R333_div2_A.cpp")
add_executable(R333_div2_B "codeforces/Codeforces Round 33x/R333_div2_B.cpp")
add_executable(R333_div2_C "codeforces/Codeforces Round 33x/R333_div2_C.cpp")
add_executable(R332_div2_A "codeforces/Codeforces Round 33x/R332_div2_A.cpp")
add_executable(R332_div2_B "codeforces/Codeforces Round 33x/R332_div2_B.cpp")
add_executable(R332_div2_C "codeforces/Codeforces Round 33x/R332_div2_C.cpp")
add_executable(R331_div2_A "codeforces/Codeforces Round 33x/R331_div2_A.cpp")
add_executable(R331_div2_B "codeforces/Codeforces Round 33x/R331_div2_B.cpp")
add_executable(R331_div2_C "codeforces/Codeforces Round 33x/R331_div2_C.cpp")
add_executable(R326_div2_A "codeforces/Codeforces Round 32x/R326_div2_A.cpp")
add_executable(R326_div2_B "codeforces/Codeforces Round 32x/R326_div2_B.cpp")
add_executable(R326_div2_C "codeforces/Codeforces Round 32x/R326_div2_C.cpp")
add_executable(R324_div2_C "codeforces/Codeforces Round 32x/R324_div2_C.cpp")
add_executable(R324_div2_B "codeforces/Codeforces Round 32x/R324_div2_B.cpp")
add_executable(R324_div2_A "codeforces/Codeforces Round 32x/R324_div2_A.cpp")
add_executable(R323_div2_A "codeforces/Codeforces Round 32x/R323_div2_A.cpp")
add_executable(R323_div2_B "codeforces/Codeforces Round 32x/R323_div2_B.cpp")
add_executable(R323_div2_C "codeforces/Codeforces Round 32x/R323_div2_C.cpp")
add_executable(R322_div2_A "codeforces/Codeforces Round 32x/R322_div2_A.cpp")
add_executable(R322_div2_B "codeforces/Codeforces Round 32x/R322_div2_B.cpp")
add_executable(R322_div2_C "codeforces/Codeforces Round 32x/R322_div2_C.cpp")
add_executable(R321_div2_C "codeforces/Codeforces Round 32x/R321_div2_C.cpp")
add_executable(R321_div2_B "codeforces/Codeforces Round 32x/R321_div2_B.cpp")
add_executable(R321_div2_A "codeforces/Codeforces Round 32x/R321_div2_A.cpp")
add_executable(R319_div2_C "codeforces/Codeforces Round 31x/R319_div2_C.cpp")
add_executable(R319_div2_B "codeforces/Codeforces Round 31x/R319_div2_B.cpp")
add_executable(R319_div2_A "codeforces/Codeforces Round 31x/R319_div2_A.cpp")
add_executable(R318_div2_A "codeforces/Codeforces Round 31x/R318_div2_A.cpp")
add_executable(R318_div2_B "codeforces/Codeforces Round 31x/R318_div2_B.cpp")
add_executable(R318_div2_C "codeforces/Codeforces Round 31x/R318_div2_C.cpp")
add_executable(R316_div2_A "codeforces/Codeforces Round 31x/R316_div2_A.cpp")
add_executable(R316_div2_B "codeforces/Codeforces Round 31x/R316_div2_B.cpp")
add_executable(R316_div2_C "codeforces/Codeforces Round 31x/R316_div2_C.cpp")
add_executable(R315_div2_A "codeforces/Codeforces Round 31x/R315_div2_A.cpp")
add_executable(R315_div2_B "codeforces/Codeforces Round 31x/R315_div2_B.cpp")
add_executable(R315_div2_C "codeforces/Codeforces Round 31x/R315_div2_C.cpp")
add_executable(R314_div2_A "codeforces/Codeforces Round 31x/R314_div2_A.cpp")
add_executable(R314_div2_B "codeforces/Codeforces Round 31x/R314_div2_B.cpp")
add_executable(R314_div2_C "codeforces/Codeforces Round 31x/R314_div2_C.cpp")
add_executable(R313_div2_A "codeforces/Codeforces Round 31x/R313_div2_A.cpp")
add_executable(R313_div2_B "codeforces/Codeforces Round 31x/R313_div2_B.cpp")
add_executable(R313_div2_C "codeforces/Codeforces Round 31x/R313_div2_C.cpp")
add_executable(R312_div2_C "codeforces/Codeforces Round 31x/R312_div2_C.cpp")
add_executable(R312_div2_B "codeforces/Codeforces Round 31x/R312_div2_B.cpp")
add_executable(R312_div2_A "codeforces/Codeforces Round 31x/R312_div2_A.cpp")