cmake_minimum_required(VERSION 3.19)
project(steady_seller)

set(CMAKE_CXX_STANDARD 17)

add_executable(a "codeforces/Codeforces Round 00x/R002_div2_A.cpp")
add_executable(b "codeforces/Codeforces Round 19x/R191_div2_B.cpp")
add_executable(c "codeforces/Codeforces Round 100x/R1009_div3_D.cpp")

add_executable(aa "codeforces/Educational Round 16x/R165_div2_A.cpp")
add_executable(bb "codeforces/Educational Round 16x/R165_div2_B.cpp")
add_executable(cc "codeforces/Educational Round 16x/R165_div2_C.cpp")

